<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Atrápame Si Puedes</string>
    
    <!-- Main Menu -->
    <string name="main_title">Atrápame Si Puedes</string>
    <string name="btn_play">Jugar</string>
    <string name="btn_config">Configuración</string>
    <string name="btn_scores">Puntuaciones</string>
    <string name="btn_exit">Salir</string>
    
    <!-- Game Screen -->
    <string name="game_title">Juego</string>
    <string name="moves_count">Movimientos: %d</string>
    <string name="time_elapsed">Tiempo: %s</string>
    <string name="moves_initial">Movimientos: 0</string>
    <string name="time_initial">Tiempo: 00:00</string>
    <string name="btn_pause">Pausar</string>
    <string name="btn_restart">Reiniciar</string>
    <string name="game_won">¡Ganaste!</string>
    <string name="game_lost">¡Perdiste!</string>
    <string name="game_board_content_description">Tablero isométrico del juego</string>
    <string name="joystick_content_description">Joystick virtual para mover al perseguidor</string>
    <!-- Configuration Screen -->
    <string name="config_title">Configuración</string>
    <string name="player_name">Nombre del Jugador</string>
    <string name="difficulty">Dificultad</string>
    <string name="difficulty_easy">Fácil</string>
    <string name="difficulty_medium">Medio</string>
    <string name="difficulty_hard">Difícil</string>
    <string name="btn_save">Guardar</string>
    <string name="btn_cancel">Cancelar</string>
    
    <!-- Score Screen -->
    <string name="score_title">Puntuaciones</string>
    <string name="no_scores">No hay puntuaciones guardadas</string>
    <string name="score_format">%s - %d movimientos - %s</string>
    
    <!-- Common -->
    <string name="loading">Cargando...</string>
    <string name="error_connection">Error de conexión</string>
    <string name="btn_ok">OK</string>
</resources>